     New manual section, "Tips and tricks".
     Tag rename checks that it won't step on an existing name.
     "help" without topic now ermits a custom TOC with command groupings.
     Unite now produces union repositories with a valid master branch.
     repocutter errors out if presented with unexpected extra arguments.
     "tip" has been removed; what it was computing is not well defined.

4.24: 2021-02-13::
     Retire the read --cvsignores option; best to use an expunge instead.
     Subversion proerties discarded during read are logged, not shouted.
     In branch/tag rename and expunge, be more flexible about RE delimiters.
     Commands that accept output redirection can also pipe to a command,
     The --branchmap option is gone in favor of using branch rename.
     The behavior and interface of the tag command has been simplified.
     The syntax of the expunge command has been simplified.
     The "paths [sub|sup]" command have been replaced by "path rename".
     The =Q set now provides a way to inspect recently modified events.
     The "edit" and "references edit" commands gave been retired.
     Subcommand moves to before first argument in branch/path/tag/reset commands.
     Filter syntax now uses subcommands rather than options.
     Blob command now takes an explicit mark.

4.23: 2021-01-13::
     Branch rename can take a regexp and do substitutions on the new name(s).
     The branchify and branchmap commands have been replaced by read options.
     Help directed to a tty goes though $PAGER when long enough to need it.
     Minor bugs related to the "done" end marker have been fixed.

4.22: 2020-12-28::
     Properly handle yet another bizarre Subversion tag-rename case.
     Massage any Subversion branch name to be legal as a git reference.
     Much of "Repository Editing" is now generated from embedded help.
     repotool mirror can now use rsync for pulling repositories.
     Repair repocutter reduce logic and add a test for it.